syntax = "proto3";

option go_package = "github.com/rezamokaram/exchange-service/api/pb";


message UserSignUpRequest {
    string firstName = 1 [json_name = "firstName"];
    string lastName = 2 [json_name = "lastName"];
    string phone = 3 [json_name = "phone"];
    string password = 4;
}

message UserSignUpResponse {
    string accessToken = 1 [json_name = "accessToken"];
    string refreshToken = 2 [json_name = "refreshToken"];
}


message UserSignInRequest {
    string phone = 1;
    string password = 2;
    string otp = 3;
}

message UserSignInResponse {
    string accessToken = 1 [json_name = "accessToken"];
    string refreshToken = 2 [json_name = "refreshToken"];
}

message User {
    uint64 id = 1;
    string firstName = 2;
    string lastName = 3;
    string phone = 4;
}